<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16sdp"
    tools:context=".ui.sign.SignFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nemonicTitle"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/message"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/messageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:elevation="@dimen/_5sdp"
            android:translationZ="@dimen/_5sdp">

            <EditText
                android:id="@+id/messageValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="@null"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/addressValue"
                app:layout_constraintTop_toBottomOf="@+id/nemonicTitle" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/nonceTitle"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/nonce"
            app:layout_constraintBottom_toTopOf="@+id/privateTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privateValue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/nonceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:elevation="@dimen/_5sdp"
            android:translationZ="@dimen/_5sdp">

            <EditText
                android:id="@+id/nonceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:inputType="number"
                android:background="@null"
                app:layout_constraintBottom_toTopOf="@+id/privateValue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/privateTitle"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/privateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:elevation="@dimen/_5sdp"
            android:translationZ="@dimen/_5sdp">

            <EditText
                android:id="@+id/privateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="@null"
                app:layout_constraintBottom_toTopOf="@+id/addressTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressValue" />
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>